data/derived/sp14/progs/unify/prog3529.ml.out
Characters 123-138:
  List.combine (List.split  ((let (one,two) = a in (x::one,y::two))))
                                                   ^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type ('c * 'd) list
